--- a/static/css/style.css
+++ b/static/css/style.css
@@ -107,7 +107,7 @@ body.notFound {
     height: fit-content;
     background-color: #ffffff;
     color: #484848;
-    padding: 30px 25px;
+    padding: 2em 1.5em;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, .16);
     -webkit-border-radius: 0.5em;
     -moz-border-radius: 0.5em;
@@ -117,6 +117,7 @@ body.notFound {
 @media (max-width: 768px) {
     .card.registration {
         width: 95%;
+        max-width: 450px;
     }
 }
 
@@ -170,14 +171,16 @@ body.notFound {
     }
 }
 
-.card.registration .prev-slide {
+.card.registration .prev-slide,
+#backToSignup {
     color: #3CCD1C;
     font-weight: 500;
     width: fit-content;
     margin: 0 auto;
 }
 
-.card.registration .prev-slide:hover {
+.card.registration .prev-slide:hover,
+#backToSignup:hover {
     cursor: pointer;
     text-decoration: underline;
 }
@@ -252,9 +255,9 @@ body.notFound {
 }
 
 .user-type-container {
-    margin-top: 20px;
+    margin: 20px auto 0;
     display: flex;
-    width: 100%;
+    width: fit-content;
 }
 
 .user-type-container.error-container label {
@@ -267,13 +270,24 @@ body.notFound {
     left: 0;
     width: 100px;
     height: 100px;
-    margin-left: 2px;
+    margin-left: 0.9em;
     border: 1px solid #bdbdbd;
     color: #bdbdbd;
     border-radius: 5px;
     box-shadow: none;
     background-color: #ffffff;
     padding-top: 10px;
+}
+
+@media (max-width: 400px) {
+    .user-type-container {
+        overflow-x: auto;
+        width: 100%;
+    }
+
+    .user-type {
+        min-width: 100px;
+    }
 }
 
 .user-type.researcher {
@@ -286,6 +300,10 @@ body.notFound {
     color: #3CCD1C !important;
     background-color: #f7fdf8;
     box-shadow: 0 0 5px 0 #6aff49;
+}
+
+.user-type span {
+    display: block;
 }
 
 .user-type-container.error-container .user-type:hover {
@@ -2402,6 +2420,8 @@ ul.fancytree-container {
     font-family: iranyekan, serif;
     margin-bottom: 0 !important;
     padding-right: 0;
+    list-style: none;
+    outline: none !important;
 }
 
 img.fancytree-icon, span.fancytree-checkbox, span.fancytree-icon {
@@ -5242,4 +5262,8 @@ nav[aria-label="breadcrumb"] ol {
 
 .attach-box .attach-box__option .attach-box__option-download:hover {
     color: #3ccd1c;
+}
+
+.check-verification-code {
+    display: none;
 }
