--- a/industry/templates/industry/layouts/initial_information.html
+++ b/industry/templates/industry/layouts/initial_information.html
@@ -127,9 +127,24 @@
                                 <span class="w__title RGroup__form-item">اطلاعات مجموعه پژوهشی</span>
                                 <span class="__line"></span>
                             </div>
-                            <div class="row">
+                            <div class="row mt-4">
                                 <div class="col-md-3"></div>
                                 <div class="col-md-5">
+                                    <div class="form-group RGroup__form-item">
+                                        <label class="rankLabel" for="id_type_group">نوع مجموعه</label>
+                                        <select id="id_type_group" name="type_group"
+                                                class="w-100 {% if researchGroup_form.type_group.errors %}error{% endif %}">
+                                            <option selected dir="rtl" value="" disabled>انتخاب کنید ...</option>
+                                            {% for option in researchGroup_form.type_group %}
+                                                {% if not forloop.first %}
+                                                    {{ option }}
+                                                {% endif %}
+                                            {% endfor %}
+                                        </select>
+                                        <div class="error">
+                                            {% render_field researchGroup_form.type_group.errors %}
+                                        </div>
+                                    </div>
                                     <div class="form-group">
                                         <label for="id_name" class="RGroup__form-item">نام مجموعه</label>
                                         <div class='RGroup__form-item'>
@@ -144,22 +159,7 @@
                                         </div>
                                     </div>
                                     <div class="form-group RGroup__form-item">
-                                        <label class="rankLabel" for="id_type_group">نوع مرکز</label>
-                                        <select id="id_type_group" name="type_group"
-                                                class="w-100 {% if researchGroup_form.type_group.errors %}error{% endif %}">
-                                            <option selected dir="rtl" value="" disabled>انتخاب کنید ...</option>
-                                            {% for option in researchGroup_form.type_group %}
-                                                {% if not forloop.first %}
-                                                    {{ option }}
-                                                {% endif %}
-                                            {% endfor %}
-                                        </select>
-                                        <div class="error">
-                                            {% render_field researchGroup_form.type_group.errors %}
-                                        </div>
-                                    </div>
-                                    <div class="form-group RGroup__form-item">
-                                        <label for="id_phone_number">نام پژوهشکده تابعه</label>
+                                        <label for="id_phone_number">ام پژوهشکده/مرکز تابعه</label>
                                         {% if researchGroup_form.subordinateResearch.errors %}
                                             {% render_field researchGroup_form.subordinateResearch class+="w-100 error" %}
                                         {% else %}
