--- a/industry/templates/industry/layouts/project_setting.html
+++ b/industry/templates/industry/layouts/project_setting.html
@@ -9,7 +9,7 @@
                     <span aria-hidden="true"></span>
                 </button>
             </div>
-            <form id="ajax-project-setting" action="{% url 'expert:show-technique' %}">
+            <form id="ajax-project-setting" action="{% url 'industry:project-setting' %}" data-url="{% url 'expert:show-technique' %}">
                 <div class="modal-body">
 
                     <div class="divide__line text-right mb-4">
