--- a/industry/templates/industry/newProject.html
+++ b/industry/templates/industry/newProject.html
@@ -35,7 +35,7 @@
                                     {% endif %}
                                     <div class="error">
                                         <span class="error-body">{% render_field form.persian_title.errors %}</span>
-                                    </div> 
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-lg-6">
@@ -63,7 +63,7 @@
                                 <div class="error">
                                     <span class="error-body">{% render_field form.key_words.erros class="w-100" %}</span>
                                 </div>
-                                
+
                                 <div class="div-info">
                                     * پس از وارد کردن کلیدواژه کلید Enter را فشار دهید، برای حذف کلیدواژه های قبلی می
                                     توانید
@@ -75,13 +75,14 @@
                             <div class="col-12 text-right">
                                 <span class="sub-header" style="position: relative">روش تحقیق : </span>
                                 <div class="error">
-                                        <span class="error-body">{% render_field form.research_methodology.errors %}</span>
-                                    </div>
+                                    <span class="error-body">{% render_field form.research_methodology.errors %}</span>
+                                </div>
                             </div>
                             <div class="col-6 text-left">
                                 <input type="radio" id="id_research_methodology_0" name="research_methodology"
                                        class="label-check-radio" value="0">
-                                <label for="id_research_methodology_0" style="padding: 5px 9px;position: relative">کمی</label>
+                                <label for="id_research_methodology_0"
+                                       style="padding: 5px 9px;position: relative">کمی</label>
                             </div>
                             <div class="col-6 text-right">
                                 <input type="radio" id="id_research_methodology_1" name="research_methodology"
@@ -98,29 +99,32 @@
                     <div class="box-body">
                         <div class="row">
                             <div class="col-lg-12 text-right">
-                                <br>
-                                <span class="sub-header">لطفا مشکل اصلی که پروژه به حل آن پرداخته را توضیح و اهمیت آن را تبیین کنید.</span>
-                                {%if form.main_problem_and_importance.errors %}
-                                    {% render_field form.main_problem_and_importance class="error w-100" rows="5" dir="rtl"  style="margin-top: 0" %}
-                                {% else %}
-                                    {% render_field form.main_problem_and_importance class="w-100" rows="5" dir="rtl"  style="margin-top: 0" %}
-                                {% endif %}
-                                <div class="error">
-                                    <span class="error-body">{% render_field form.main_problem_and_importance.errors %}</span>
+                                <div class="form-group">
+                                    <span class="sub-header">لطفا مشکل اصلی که پروژه به حل آن پرداخته را توضیح و اهمیت آن را تبیین کنید.</span>
+                                    {% if form.main_problem_and_importance.errors %}
+                                        {% render_field form.main_problem_and_importance class="error w-100" rows="5" dir="rtl" style="margin-top: 0" %}
+                                    {% else %}
+                                        {% render_field form.main_problem_and_importance class="w-100" rows="5" dir="rtl" style="margin-top: 0" %}
+                                    {% endif %}
+                                    <div class="error">
+                                        <span class="error-body">{% render_field form.main_problem_and_importance.errors %}</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-12 text-right">
-                                <span class="sub-header">در صورت حل این مشکل، چه پیشرفتی در شیوه های درمانی / تجهیزات پزشکی / خدمات درمانی یا ... حاصل می شود؟</span>
-                                {% if form.progress_profitability.errors %}
-                                    {% render_field form.progress_profitability class="error w-100" rows="5" dir="rtl"  style="margin-top: 0" %}
-                                {% else %}
-                                    {% render_field form.progress_profitability class="w-100" rows="5" dir="rtl"  style="margin-top: 0" %}
-                                {% endif %}
-                                <div class="error">
+                                <div class="form-group">
+                                    <span class="sub-header">در صورت حل این مشکل، چه پیشرفتی در شیوه های درمانی / تجهیزات پزشکی / خدمات درمانی یا ... حاصل می شود؟</span>
+                                    {% if form.progress_profitability.errors %}
+                                        {% render_field form.progress_profitability class="error w-100" rows="5" dir="rtl" style="margin-top: 0" %}
+                                    {% else %}
+                                        {% render_field form.progress_profitability class="w-100" rows="5" dir="rtl" style="margin-top: 0" %}
+                                    {% endif %}
+                                    <div class="error">
                                         <span class="error-body">{% render_field form.progress_profitability.errors %}</span>
                                     </div>
+                                </div>
                             </div>
                         </div>
                         {% comment %} <div class="row">
@@ -145,29 +149,32 @@
                     <div class="box-body">
                         <div class="row">
                             <div class="col-lg-12 text-right">
-                                <br>
-                                <span class="sub-header">لطفا راه حل خود را برای حل این مشکل به طور خلاصه توضیح دهید.</span>
-                                
-                                {% if form.approach.errors %}
-                                    {% render_field form.approach class="error w-100" rows="7" dir="rtl"  style="margin-top: 0" %}
-                                {% else %}
-                                    {% render_field form.approach class="w-100" rows="7" dir="rtl"  style="margin-top: 0" %}
-                                {% endif %}
-                                <div class="error">
-                                    <span class="error-body">{% render_field form.approach.errors %} </span>
-                                </div> 
+                                <div class="form-group">
+                                    <span class="sub-header">لطفا راه حل خود را برای حل این مشکل به طور خلاصه توضیح دهید.</span>
+
+                                    {% if form.approach.errors %}
+                                        {% render_field form.approach class="error w-100" rows="7" dir="rtl" style="margin-top: 0" %}
+                                    {% else %}
+                                        {% render_field form.approach class="w-100" rows="7" dir="rtl" style="margin-top: 0" %}
+                                    {% endif %}
+                                    <div class="error">
+                                        <span class="error-body">{% render_field form.approach.errors %} </span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-12 text-right">
-                                <span class="sub-header"> این راه حل چه مشکلاتی می‌تواند داشته باشد؟</span>
-                                {% if form.potential_problems.errors %}
-                                {% render_field form.potential_problems class="error w-100" rows="7" dir="rtl"  style="margin-top: 0" %}
-                                {% else %}
-                                    {% render_field form.potential_problems class="w-100" rows="7" dir="rtl"  style="margin-top: 0" %}
-                                {% endif %}
-                                <div class="error">
-                                    <span class="error-body"> {% render_field form.potential_problems.errors %}</span>
+                                <div class="form-group">
+                                    <span class="sub-header"> این راه حل چه مشکلاتی می‌تواند داشته باشد؟</span>
+                                    {% if form.potential_problems.errors %}
+                                        {% render_field form.potential_problems class="error w-100" rows="7" dir="rtl" style="margin-top: 0" %}
+                                    {% else %}
+                                        {% render_field form.potential_problems class="w-100" rows="7" dir="rtl" style="margin-top: 0" %}
+                                    {% endif %}
+                                    <div class="error">
+                                        <span class="error-body"> {% render_field form.potential_problems.errors %}</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -182,56 +189,63 @@
                     <div class="box-body">
                         <div class="row">
                             <div class="col-lg-12 text-right">
-                                <br>
-                                <span class="sub-header">جهت انجام پروژه خود به چه امکانات یا آزمایشگاه هایی احتیاج دارید؟</span>
-                                
-                                {% if form.required_lab_equipment.errors %}                                    
-                                    {% render_field form.required_lab_equipment class="error w-100" rows="4" dir="rtl"  style="margin-top: 0" %}
-                                {% else %}
-                                    {% render_field form.required_lab_equipment class="w-100" rows="4" dir="rtl"  style="margin-top: 0" %}
-                                {% endif %}
-                                <div class="error">
-                                    <span class="error-body"> {% render_field form.required_lab_equipment.errors %}</span>
+                                <div class="form-group">
+                                    <span class="sub-header">جهت انجام پروژه خود به چه امکانات یا آزمایشگاه هایی احتیاج دارید؟</span>
+
+                                    {% if form.required_lab_equipment.errors %}
+                                        {% render_field form.required_lab_equipment class="error w-100" rows="4" dir="rtl" style="margin-top: 0" %}
+                                    {% else %}
+                                        {% render_field form.required_lab_equipment class="w-100" rows="4" dir="rtl" style="margin-top: 0" %}
+                                    {% endif %}
+                                    <div class="error">
+                                        <span class="error-body"> {% render_field form.required_lab_equipment.errors %}</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-12 text-right">
-                                <span class="sub-header">جهت انجام پروژه خود به چه تخصص ها و چه تکنیک ها آزمایشگاهی ای احتیاج دارید؟</span>
-                                {% if form.required_method.errors %}                                    
-                                    {% render_field form.required_method class="error w-100" rows="4" dir="rtl"  style="margin-top:0" %}
-                                {% else %}
-                                    {% render_field form.required_method class="w-100" rows="4" dir="rtl"  style="margin-top:0" %}
-                                {% endif %}
-                                <div class="error">
-                                    <span class="error-body"> {% render_field form.required_method.errors %}</span>
+                                <div class="form-group">
+                                    <span class="sub-header">جهت انجام پروژه خود به چه تخصص ها و چه تکنیک ها آزمایشگاهی ای احتیاج دارید؟</span>
+                                    {% if form.required_method.errors %}
+                                        {% render_field form.required_method class="error w-100" rows="4" dir="rtl" style="margin-top:0" %}
+                                    {% else %}
+                                        {% render_field form.required_method class="w-100" rows="4" dir="rtl" style="margin-top:0" %}
+                                    {% endif %}
+                                    <div class="error">
+                                        <span class="error-body"> {% render_field form.required_method.errors %}</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-12 text-right">
-                                <span class="sub-header">لطفا مراحل انجام پروژه خود را مشخص کنید.</span>
-                                
-                                {% if form.project_phase.errors %}
-                                    {% render_field form.project_phase class="error w-100" rows="4" dir="rtl"  style="margin-top: 0" %}
-                                {% else %}
-                                    {% render_field form.project_phase class="w-100" rows="4" dir="rtl"  style="margin-top: 0" %}
-                                {% endif %}
-                                <div class="error">
-                                    <span class="error-body"> {% render_field form.project_phase.errors %}</span>
+                                <div class="form-group">
+                                    <span class="sub-header">لطفا مراحل انجام پروژه خود را مشخص کنید.</span>
+
+                                    {% if form.project_phase.errors %}
+                                        {% render_field form.project_phase class="error w-100" rows="4" dir="rtl" style="margin-top: 0" %}
+                                    {% else %}
+                                        {% render_field form.project_phase class="w-100" rows="4" dir="rtl" style="margin-top: 0" %}
+                                    {% endif %}
+                                    <div class="error">
+                                        <span class="error-body"> {% render_field form.project_phase.errors %}</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-12 text-right">
-                                <span class="sub-header">پروژه شما به چه مقدار بودجه نیاز دارد؟</span>
-                                {% if form.required_budget.errors %}
-                                    {% render_field form.required_budget class="error w-100" rows="4"  style="margin-top: 0;direction: rtl" %}
-                                {% else %}
-                                    {% render_field form.required_budget class="w-100" rows="4"  style="margin-top: 0;direction: rtl" %}
-                                {% endif %}
-                                <div class="error">
-                                    <span class="error-body"> {% render_field form.required_budget.errors %} </span>
+                                <div class="form-group">
+                                    <span class="sub-header">پروژه شما به چه مقدار بودجه نیاز دارد؟</span>
+                                    {% if form.required_budget.errors %}
+                                        {% render_field form.required_budget class="error w-100" rows="4" style="margin-top: 0;direction: rtl" %}
+                                    {% else %}
+                                        {% render_field form.required_budget class="w-100" rows="4" style="margin-top: 0;direction: rtl" %}
+                                    {% endif %}
+                                    <div class="error">
+                                        <span class="error-body"> {% render_field form.required_budget.errors %} </span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -244,15 +258,16 @@
                     <div class="box-body">
                         <div class="row">
                             <div class="col-lg-12 text-right">
-                                <br>
-                                <span class="sub-header">از لحاظ نکات اخلاقی (کار با نمونه انسانی، حیوانی، مواد رادیواکتیو و...)، پروژه شما با چه چالش هایی روبه رو است؟</span>
-                                {% if form.policy.errors %} 
-                                    {% render_field form.policy class="error w-100" rows="7" dir="rtl"  style="margin-top: 0" %}
-                                {% else %}
-                                    {% render_field form.policy class="w-100" rows="7" dir="rtl"  style="margin-top: 0" %}
-                                {% endif %}
-                                <div class="error">
-                                    <span class="error-body"> {% render_field form.policy.errors %} </span>
+                                <div class="form-group">
+                                    <span class="sub-header">از لحاظ نکات اخلاقی (کار با نمونه انسانی، حیوانی، مواد رادیواکتیو و...)، پروژه شما با چه چالش هایی روبه رو است؟</span>
+                                    {% if form.policy.errors %}
+                                        {% render_field form.policy class="error w-100" rows="7" dir="rtl" style="margin-top: 0" %}
+                                    {% else %}
+                                        {% render_field form.policy class="w-100" rows="7" dir="rtl" style="margin-top: 0" %}
+                                    {% endif %}
+                                    <div class="error">
+                                        <span class="error-body"> {% render_field form.policy.errors %} </span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
